--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Guilherme Alves" />
+    <meta name="description" content="Cafeteria da TripleTen" />
+    <meta name="keywords" content="Cafeteria, Café, TripleTen, Programação" />
     <title>Triple Espresso</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
