--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital@1&display=swap"
     />
   </head>
-
-  <body></body>
+  <body>
+    <div class="page"></div>
+  </body>
 </html>
