--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
   <body>
     <div class="page">
       <header class="header"></header>
-      <main class="content"></main>
+      <main class="content">
+        <section class="home"></section>
+        <section class="receitas"></section>
+        <section class="formulario"></section>
+        <section class="cardapio"></section>
+        <section class="sobre"></section>
+      </main>
       <footer class="footer"></footer>
     </div>
   </body>
