--- a/index.html
+++ b/index.html
@@ -31,9 +31,85 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Logo da TripleEspresso"
+            class="nav__logo"
+          />
+          <ul class="nav__links">
+            <li>
+              <a class="nav__link" href="#receitas">Receitas</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#reservar">Reservar uma mesa</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#menu">Menu</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#contatos">Contatos</a>
+            </li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span class="header__span-accent">Café especial</span> na biblioteca
+          Triple Peaks
+        </h1>
+        <p class="header__description">
+          Bem vindo à nossa zona de estudo! Temos aquele cafezinho para
+          energizar você e vibrações aconchegantes para ajudá-lo a ser criativo
+        </p>
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="Ilustração de uma cafeteria"
+          class="header__image"
+        />
+
+        <div class="header__footer">
+          <p class="header__paragraph">
+            Horários:
+            <span class="header__span-footer"
+              >Segunda a sexta (10:00 - 19:00) </span
+            >Sábado a domingo (11:00 - 18:00)
+          </p>
+          <p class="header__paragraph_address">
+            200 Success Avenue, a cidade de Triple Peaks
+          </p>
+        </div>
+      </header>
       <main class="content">
-        <section class="home"></section>
+        <section class="recipes">
+          <h2 class="recipes__title">Receitas</h2>
+          <p class="recipes__subtitle">
+            Confira algumas receitas que coletamos para seu lanchinho caseiro:
+          </p>
+          <div class="recipes__videos">
+            <div class="recipes__videos-item">
+              <iframe
+                src="https://www.youtube.com/watch?v=j6VlT_jUVPc"
+                title="Receita Aeropress"
+                class="recipes__iframe"
+              ></iframe>
+              <div class="recipes__videos_paragraph">
+                <p class="recipes__video-caption">Receita Aeropress</p>
+                <p class="recipes__video-caption">~5 min</p>
+              </div>
+            </div>
+            <div class="recipes__video-item">
+              <iframe
+                src="https://www.youtube.com/watch?v=st571DYYTR8"
+                title="Receita de Prensa Francesa"
+                class="recipes__iframe"
+              ></iframe>
+              <div class="recipes__videos_paragraph">
+                <p class="recipes__video-caption">Receita de Prensa Francesa</p>
+                <p class="recipes__video-caption">~15 min</p>
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="receitas"></section>
         <section class="formulario"></section>
         <section class="cardapio"></section>
