--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
               >Segunda a sexta (10:00 - 19:00) </span
             >Sábado a domingo (11:00 - 18:00)
           </p>
-          <p class="header__paragraph_address">
+          <p class="header__paragraph header__paragraph_address">
             200 Success Avenue, a cidade de Triple Peaks
           </p>
         </div>
       </header>
       <main class="content">
-        <section class="recipes">
+        <section class="recipes" id="receitas">
           <h2 class="recipes__title">Receitas</h2>
           <p class="recipes__subtitle">
             Confira algumas receitas que coletamos para seu lanchinho caseiro:
@@ -92,7 +92,7 @@
                 title="Receita Aeropress"
                 class="recipes__iframe"
               ></iframe>
-              <div class="recipes__videos_paragraph">
+              <div class="recipes__video recipes__videos_paragraph">
                 <p class="recipes__video-caption">Receita Aeropress</p>
                 <p class="recipes__video-caption">~5 min</p>
               </div>
