--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 title="Receita Aeropress"
                 class="recipes__iframe"
               ></iframe>
-              <div class="recipes__video recipes__videos_paragraph">
+              <div class="recipes__videos recipes__videos_paragraph">
                 <p class="recipes__video-caption">Receita Aeropress</p>
                 <p class="recipes__video-caption">~5 min</p>
               </div>
@@ -110,10 +110,9 @@
             </div>
           </div>
         </section>
-        <section class="receitas"></section>
-        <section class="formulario"></section>
-        <section class="cardapio"></section>
-        <section class="sobre"></section>
+        <section class="formulario" id="reservar"></section>
+        <section class="cardapio" id="menu"></section>
+        <section class="sobre" id="contatos"></section>
       </main>
       <footer class="footer"></footer>
     </div>
