--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 title="Receita de Prensa Francesa"
                 class="recipes__iframe"
               ></iframe>
-              <div class="recipes__videos_paragraph">
+              <div class="recipes__videos recipes__videos_paragraph">
                 <p class="recipes__video-caption">Receita de Prensa Francesa</p>
                 <p class="recipes__video-caption">~15 min</p>
               </div>
