--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="reservation__form">
             <form class="form">
               <fieldset class="form__fieldset">
-                <span class="form__fieldset_span"
+                <span class="form__fieldset form__fieldset_span"
                   ><label class="form__label">Nome *</label>
                   <input
                     class="form__input"
@@ -124,7 +124,7 @@
                     required
                 /></span>
 
-                  ><label class="form__label">Número de convidados *</label>
+                  <label class="form__label">Número de convidados *</label>
                   <input
                     class="form__input"
                     type="number"
@@ -148,12 +148,12 @@
                 Reservar uma mesa
               </button>
               <fieldset class="form__fieldset">
-                <label class="form__label form__label_checkbox">
+                <span class="form__span form__span_checkbox">
                   <input class="form__input form__input_box" type="checkbox" />
                   <label class="form__label"
                     >Eu concordo com os termos de uso</label
                   >
-                </label>
+                </span>
               </fieldset>
             </form>
           </div>
