--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     placeholder="1-8"
                     required
                 /></span>
-                <span class="form__fieldset_span"
+                <span class="form__fieldset form__fieldset_span"
                   ><label class="form__label">Data & hora *</label>
                   <input class="form__input" type="datetime-local" required
                 /></span>
