--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   ><label class="form__label">Data & hora *</label>
                   <input class="form__input" type="datetime-local" required
                 /></span>
-                <span class="form__fieldset_span"
+                <span class="form__fieldset form__fieldset_span"
                   ><label class="form__label">Seu e-mail *</label>
                   <input
                     class="form__input"
