--- a/index.html
+++ b/index.html
@@ -115,34 +115,40 @@
           <div class="reservation__form">
             <form class="form">
               <fieldset class="form__fieldset">
-                <span class="form__fieldset form__fieldset_span"
-                  ><label class="form__label">Nome *</label>
+                <label class="form__label"
+                  >Nome *
                   <input
                     class="form__input"
                     type="text"
                     placeholder="Nome"
                     required
-                /></span>
+                  />
+                </label>
 
-                  <label class="form__label">Número de convidados *</label>
+                <label class="form__label"
+                  >Número de convidados *
                   <input
                     class="form__input"
                     type="number"
                     placeholder="1-8"
                     required
-                /></span>
-                <span class="form__fieldset form__fieldset_span"
-                  ><label class="form__label">Data & hora *</label>
-                  <input class="form__input" type="datetime-local" required
-                /></span>
-                <span class="form__fieldset form__fieldset_span"
-                  ><label class="form__label">Seu e-mail *</label>
+                  />
+                </label>
+
+                <label class="form__label"
+                  >Data & hora *
+                  <input class="form__input" type="datetime-local" required />
+                </label>
+
+                <label class="form__label"
+                  >Seu e-mail *
                   <input
                     class="form__input"
                     type="email"
                     placeholder="email@email.com"
                     required
-                /></span>
+                  />
+                </label>
               </fieldset>
               <button class="form__button" type="submit">
                 Reservar uma mesa
