--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </section>
         <section class="reservation" id="reservar">
           <h2 class="reservation__title">Reservar uma mesa</h2>
-          <div class="reservation__form">
+          <div class="reservation__form form">
             <form class="form">
               <fieldset class="form__fieldset">
                 <label class="form__label"
