Começando a parte 3 do projeto

--- a/index.html
+++ b/index.html
@@ -161,10 +161,157 @@
             </fieldset>
           </form>
         </section>
-        <section class="cardapio" id="menu"></section>
-        <section class="sobre" id="contatos"></section>
+        <section class="menu" id="menu">
+          <h2 class="menu__title">Cardápio</h2>
+          <p class="menu__subtitle">
+            Preparamos café a partir de grãos torrados localmente com
+            certificação Fairtrade e usamos xícaras biodegradáveis. Todos os
+            chás da nossa coleção custam R$ 20/xícara
+          </p>
+          <div class="menu__cards">
+            <div class="card">
+              <h3 class="card__title">Filtro</h3>
+              <ul class="card__content">
+                <li class="card__list-item">
+                  Regular (350 ml)
+                  <span class="card__list-divider"> </span>
+                  R$10
+                </li>
+                <li class="card__list-item">
+                  Grande (470 ml)
+                  <span class="card__list-divider"></span>
+                  R$12,5
+                </li>
+                <li class="card__list-item">
+                  Extra grande (590m ml)
+                  <span class="card__list-divider"></span>
+                  R$15
+                </li>
+                <li class="card__list-item">
+                  Tamanho do copo (700 ml descafeinado)
+                  <span class="card__list-divider"></span>
+                  R$17,5
+                </li>
+                <li class="card__list-item">
+                  Café gelado
+                  <span class="card__list-divider"></span>
+                  R$12,5
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <h3 class="card__title">Expresso</h3>
+              <ul class="card__content">
+                <li class="card__list-item">
+                  Macchiato
+                  <span class="card__list-divider"></span>
+                  R$22,5
+                </li>
+                <li class="card__list-item">
+                  Cortado
+                  <span class="card__list-divider"></span>
+                  R$25
+                </li>
+                <li class="card__list-item">
+                  Mocha
+                  <span class="card__list-divider"></span>
+                  R$30
+                </li>
+                <li class="card__list-item">
+                  Nascer do sol na Área da Baía (descafeinado)
+                  <span class="card__list-divider"></span>
+                  R$10
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <h3 class="card__title">Produtos de Padaria</h3>
+              <ul class="card__content">
+                <li class="card__list-item">
+                  Croissant de Amêndoa
+                  <span class="card__list-divider"></span>
+                  R$20
+                </li>
+                <li class="card__list-item">
+                  Pão de Banana
+                  <span class="card__list-divider"></span>
+                  R$17,5
+                </li>
+                <li class="card__list-item">
+                  Torta de Limão
+                  <span class="card__list-divider"></span>
+                  R$30
+                </li>
+                <li class="card__list-item">
+                  Bolo Veludo Azul
+                  <span class="card__list-divider"></span>
+                  R$37,5
+                </li>
+                <li class="card__list-item">
+                  Cookie web
+                  <span class="card__list-divider"></span>
+                  R$20
+                </li>
+                <li class="card__list-item">
+                  Baguete fresc
+                  <span class="card__list-divider"></span>
+                  R$2,5
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="about" id="contatos">
+          <h2 class="about__title">Sobre o café</h2>
+          <div class="about__content">
+            <p class="about__paragraph">
+              Nosso café está localizado na Biblioteca Triple Peaks. Possui 6
+              mesas e Wi-Fi gratuito.
+            </p>
+            <p class="about__paragraph">
+              Nossa principal missão é manter nossos hóspedes confortáveis e
+              energizados
+            </p>
+            <p class="about__paragraph">
+              Além disso, tentamos reduzir nosso impacto ambiental, logo, não
+              vendemos copos descartáveisMas você pode comprar um dos nossos
+              copos reutilizáveis.
+            </p>
+          </div>
+          <div class="about__circle"></div>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__content">
+          <img
+            class="footer__logo"
+            src="./images/logo_coffeeshop_light.svg"
+            alt="Logo Triple Espresso"
+          />
+          <div class="footer__social">
+            <h3 class="footer__social-heading">Mídia social</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <p class="footer__social-link">Facebook</p>
+                <img
+                  class="footer__social-icon"
+                  src="./images/facebook_white.svg"
+                  alt="Logo Facebook"
+                />
+              </li>
+              <li class="footer__list-item">
+                <p class="footer__social-link">Instagram</p>
+                <img
+                  class="footer__social-icon"
+                  src="./images/instagram_white.svg"
+                  alt="Logo Instagram"
+                />
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">© 2023 Guilherme Alves Sanches</p>
+      </footer>
     </div>
   </body>
 </html>
