--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             <h3 class="footer__social-heading">Mídia social</h3>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <p class="footer__social-link">Facebook</p>
+                <a class="footer__social-link" href="#">Facebook</a>
                 <img
                   class="footer__social-icon"
                   src="./images/facebook_white.svg"
@@ -300,7 +300,7 @@
                 />
               </li>
               <li class="footer__list-item">
-                <p class="footer__social-link">Instagram</p>
+                <a class="footer__social-link" href="#">Instagram</a>
                 <img
                   class="footer__social-icon"
                   src="./images/instagram_white.svg"
