--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="recipes__videos">
             <div class="recipes__videos-item">
               <iframe
-                src="https://www.youtube.com/watch?v=j6VlT_jUVPc"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=l-W-X9BbRMgBxOZZ"
                 title="Receita Aeropress"
                 class="recipes__iframe"
               ></iframe>
@@ -98,7 +98,7 @@
             </div>
             <div class="recipes__video-item">
               <iframe
-                src="https://www.youtube.com/watch?v=st571DYYTR8"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=1a1TvU2Cq7YbStWu"
                 title="Receita de Prensa Francesa"
                 class="recipes__iframe"
               ></iframe>
